update(14/10/2017) practice menu

--- a/buoi1+2/index.html
+++ b/buoi1+2/index.html
@@ -37,7 +37,13 @@
 	<ol>
 		<li class="blurred-text">1</li>
 		<li class="blurred-text">2</li>
-		<li class="blurred-text">3</li>
+		<li class="blurred-text">
+			<ul>
+				<li class="li">1</li>	
+				<li id="secondli">2</li>
+				<li class="li">3</li>
+			</ul>
+		</li>
 	</ol>
 
 	form
